@@ -33,6 +33,8 @@ open $DEBUGFH, ">&STDERR" if $DEBUG;
 
 *_debug = $DEBUG ? sub(@) { print {$DEBUGFH} @_ } : sub(){0};
 
+our $TIMEOUT = 30;
+
 #--------------------------------------------------------------------------#
 # command to tee output -- the argument is a filename that must
 # be opened to signal that the process is ready to receive input.
@@ -220,7 +222,8 @@ sub _wait_for_tees {
   my ($stash) = @_;
   my $start = time;
   my @files = values %{$stash->{flag_files}};
-  1 until _files_exist(@files) || (time - $start > 30);
+  my $timeout = $ENV{PERL_CAPTURE_TINY_TIMEOUT} || $TIMEOUT;
+  1 until _files_exist(@files) || ($TIMEOUT && (time - $start > $timeout));
   Carp::confess "Timed out waiting for subprocesses to start" if ! _files_exist(@files);
   unlink $_ for @files;
 }
@@ -495,6 +498,16 @@ almost certainly going to cause problems.  Don't do that.
 == No support for Perl 5.8.0
 
 It's just too buggy when it comes to layers and UTF8.
+
+= ENVIRONMENT
+
+== PERL_CAPTURE_TINY_TIMEOUT
+
+Capture::Tiny uses subprocesses for {tee}.  By default, Capture::Tiny will
+timeout with an error if the subprocesses are not ready to receive data within
+30 seconds (or whatever is the value of {$Capture::Tiny::TIMEOUT}).  An
+alternate timeout may be specified by setting the {PERL_CAPTURE_TINY_TIMEOUT}
+environment variable.
 
 = BUGS
 
