@@ -7,6 +7,11 @@
 
 Revision history for Capture-Tiny
 
+  Added:
+
+  - Added support for $ENV{PERL_CAPTURE_TINY_TIMEOUT} to control
+    the timeout period under 'tee'
+
 0.08 Sun Jun 20 19:13:19 EDT 2010
 
   Fixed:
